--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,124 @@ html{
     box-sizing: border-box;
   }
   body{
-    text-align: center;
+    color: #655c56;
+    background-color: #effcef;
   }
-  form{
+  header{
+    text-align: center;
+    width: 100%; 
+    padding:5px;  
+    background-color: #ccedd2;
+  }
+  header form{
     display: inline-block;
-    
+  }
+
+  form{
+    margin-left: auto;
+    margin-right: auto;
   }
   footer {
+    text-align: center;
+    margin-top: 10px;
     position: absolute;
     bottom: 0;
-    height: 25px;          
+    height: 35px;          
     width: 100%;    
-    line-height: 25px;
+    line-height: 35px;
+    background-color: #ccedd2;
+    position: fixed;
 }
+
+input{
+  padding: 3px;
+}
+
+.filterBy{
+  width:100%;
+  margin:10px;
+ 
+}
+
+.addBookmarkForm  input, select, textarea{
+  width: 100%;
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;  
+}
+
+.addBookmarkForm{
+  margin-left: 33%;
+  margin-right: 33%;
+}
+
+button{
+  padding: 10px;
+  margin:10px;
+  background-color: #94d3ac; /* Green */
+  border: none;
+  color:#655c56;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-weight: bold;
+  border-radius: 8px;
+}
+select{
+  padding: 10px;
+  color:#655c56;
+  font-weight: bold;
+}
+ div,h3,p{
+  display: inline-block;
+  padding: 5px;
+  margin:3px 0;
+}
+li{
+  margin-left: 30%;
+  margin-right: 30%
+}
+@media screen and (max-width: 320px){
+  h1{
+    font-size: 25px;
+  }
+  button{
+    padding: 8px;
+    margin:5px;
+    font-size: 10px;
+    border-radius: 8px;
+  }
+  select{
+    padding: 5px;
+    margin:5px;
+    font-size: 10px;
+  }
+  .addBookmarkForm{
+    margin-left: 5%;
+    margin-right: 5%
+  }
+  .addBookmarkForm  input, select, textarea{
+    width: 80%;
+    padding: 8px;
+    margin: 5px;
+    
+  }
+  .filterBy{
+    width:90%;
+    margin:10px;
+   
+  }
+  div,h3,p{
+    display: inline-block;
+    padding: 3px;
+    margin:2px 0;
+    font-size: 15px;
+  }
+  li{
+    margin-left: 10%;
+    margin-right: 10%
+  }
+}
+
